Set the readme in the pyproject.toml so it shows up in PyPI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [tool.poetry]
 name = "python-decouple-aws"
-version = "0.2.2"
+version = "0.2.3"
 description = "AWS Extensions for Python Decouple"
 authors = ["Matt Magin <matt.magin@cmv.com.au>"]
 license = "MIT"
 repository = "https://github.com/AzMoo/python-decouple-aws"
+readme = "README.rst"
 packages = [
     { include = "decouple_aws" },
 ]
