--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ boto3 = "^1.7"
 [tool.poetry.dev-dependencies]
 prospector = "^1.1"
 pre-commit = "^1.10"
+pytest = "^3.2"
+tox = "^3.4"
+mock = "^2.0"
